# into_all_scales

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  create_html.py  main.py  pattern.py  scale_group.py  settings.py  transpose.py  transpose_output.py
app/models/: __init__.py  models_pattern.py  models_scale.py
assets/: index_example.html  page_template.html  style.css
tests/: conftest.py  test_create_html.py  test_main.py  test_pattern.py  test_scale_group.py  test_transpose.py  test_transpose_output.py
