[tool.poetry]
name = "into-all-scales"
version = "0.1.0"
description = ""
authors = ["Irina <eira@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyhtml2pdf = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
wemake-python-styleguide = "^0.17.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 125
profile = "black"